iaac/blueprint/infra/modules/istio/security/authorization-policies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: istio-system
spec:
  action: ALLOW
  rules:
  - {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: infra-namespace-policy
  namespace: infra
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["infra", "app", "istio-system"]
  - to:
    - operation:
        methods: ["GET", "POST"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app-namespace-policy
  namespace: app
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["app", "istio-system"]
  - to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
